--- a/components/net/Cargo.toml
+++ b/components/net/Cargo.toml
@@ -56,7 +56,7 @@ threadpool = "1.0"
 time = "0.1.17"
 url = "1.2"
 uuid = {version = "0.7", features = ["v4"]}
-webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
+webrender_api = {git = "https://github.com/modulesio/webrender", features = ["ipc"]}
 ws = { version = "0.7", features = ["ssl"] }
 
 [dev-dependencies]
