--- a/components/net_traits/Cargo.toml
+++ b/components/net_traits/Cargo.toml
@@ -39,7 +39,7 @@ servo_url = {path = "../url"}
 time = "0.1"
 url = "1.2"
 uuid = {version = "0.7", features = ["v4", "serde"]}
-webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
+webrender_api = {git = "https://github.com/modulesio/webrender", features = ["ipc"]}
 
 [dev-dependencies]
 std_test_override = { path = "../std_test_override" }
