--- a/components/compositing/Cargo.toml
+++ b/components/compositing/Cargo.toml
@@ -36,8 +36,8 @@ servo_geometry = {path = "../geometry"}
 servo_url = {path = "../url"}
 style_traits = {path = "../style_traits"}
 time = "0.1.17"
-webrender = {git = "https://github.com/servo/webrender", features = ["capture"]}
-webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
+webrender = {git = "https://github.com/modulesio/webrender", features = ["capture"]}
+webrender_api = {git = "https://github.com/modulesio/webrender", features = ["ipc"]}
 
 [build-dependencies]
 toml = "0.4.5"
