--- a/components/geometry/Cargo.toml
+++ b/components/geometry/Cargo.toml
@@ -16,4 +16,4 @@ euclid = "0.19"
 malloc_size_of = { path = "../malloc_size_of" }
 malloc_size_of_derive = { path = "../malloc_size_of_derive" }
 style_traits = { path = "../style_traits" }
-webrender_api = { git = "https://github.com/servo/webrender" }
+webrender_api = { git = "https://github.com/modulesio/webrender" }
