--- a/components/gfx/Cargo.toml
+++ b/components/gfx/Cargo.toml
@@ -42,7 +42,7 @@ style = {path = "../style", features = ["servo"]}
 time = "0.1.12"
 unicode-bidi = {version = "0.3", features = ["with_serde"]}
 unicode-script = {version = "0.2", features = ["harfbuzz"]}
-webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
+webrender_api = {git = "https://github.com/modulesio/webrender", features = ["ipc"]}
 xi-unicode = "0.1.0"
 ucd = "0.1.1"
 
