--- a/components/malloc_size_of/Cargo.toml
+++ b/components/malloc_size_of/Cargo.toml
@@ -43,7 +43,7 @@ string_cache = { version = "0.7", optional = true }
 thin-slice = "0.1.0"
 time = { version = "0.1.17", optional = true }
 url = { version = "1.2", optional = true }
-webrender_api = { git = "https://github.com/servo/webrender", features = ["ipc"], optional = true }
+webrender_api = { git = "https://github.com/modulesio/webrender", features = ["ipc"], optional = true }
 xml5ever = { version = "0.12", optional = true }
 void = "1.0.2"
 
