--- a/components/msg/Cargo.toml
+++ b/components/msg/Cargo.toml
@@ -16,7 +16,7 @@ doctest = false
 malloc_size_of = { path = "../malloc_size_of" }
 malloc_size_of_derive = { path = "../malloc_size_of_derive" }
 serde = "1.0.60"
-webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
+webrender_api = {git = "https://github.com/modulesio/webrender", features = ["ipc"]}
 
 [dev-dependencies]
 size_of_test = {path = "../size_of_test"}
