--- a/components/script_traits/Cargo.toml
+++ b/components/script_traits/Cargo.toml
@@ -37,5 +37,5 @@ servo_url = {path = "../url"}
 style_traits = {path = "../style_traits", features = ["servo"]}
 time = "0.1.12"
 url = "1.2"
-webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
+webrender_api = {git = "https://github.com/modulesio/webrender", features = ["ipc"]}
 webvr_traits = {path = "../webvr_traits"}
