--- a/components/style_traits/Cargo.toml
+++ b/components/style_traits/Cargo.toml
@@ -22,7 +22,7 @@ malloc_size_of = { path = "../malloc_size_of" }
 malloc_size_of_derive = { path = "../malloc_size_of_derive" }
 selectors = { path = "../selectors" }
 serde = {version = "1.0", optional = true}
-webrender_api = {git = "https://github.com/servo/webrender", optional = true}
+webrender_api = {git = "https://github.com/modulesio/webrender", optional = true}
 servo_atoms = {path = "../atoms", optional = true}
 servo_arc = { path = "../servo_arc" }
 servo_url = { path = "../url", optional = true }
