--- a/ports/libmlservo/Cargo.toml
+++ b/ports/libmlservo/Cargo.toml
@@ -17,4 +17,6 @@ libservo = { path = "../../components/servo" }
 log = "0.4"
 servo-egl = "0.2"
 smallvec = "0.6"
+keyboard-types = "0.4.3"
+winit = {version = "0.18", features = ["icon_loading"]}
 
